Import centos release 2.4.23-26

--- a/slapd.conf
+++ b/slapd.conf
@@ -60,13 +60,12 @@ argsfile	/var/run/openldap/slapd.args
 # moduleload valsort.la
 
 # The next three lines allow use of TLS for encrypting connections using a
-# dummy test certificate which you can generate by changing to
-# /etc/pki/tls/certs, running "make slapd.pem", and fixing permissions on
-# slapd.pem so that the ldap user or group can read it.  Your client software
-# may balk at self-signed certificates, however.
-# TLSCACertificateFile /etc/pki/tls/certs/ca-bundle.crt
-# TLSCertificateFile /etc/pki/tls/certs/slapd.pem
-# TLSCertificateKeyFile /etc/pki/tls/certs/slapd.pem
+# dummy test certificate which you can generate by running
+# /usr/libexec/openldap/generate-server-cert.sh. Your client software may balk
+# at self-signed certificates, however.
+TLSCACertificatePath /etc/openldap/certs
+TLSCertificateFile "\"OpenLDAP Server\""
+TLSCertificateKeyFile /etc/openldap/certs/password
 
 # Sample security restrictions
 #	Require integrity protection (prevent hijacking)
