--- a/contrib/ldapc++/configure.in
+++ b/contrib/ldapc++/configure.in
@@ -7,7 +7,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_COPYRIGHT([[Copyright 2000-2012 The OpenLDAP Foundation. All rights reserved.
 Restrictions apply, see COPYRIGHT and LICENSE files.]])
-AC_REVISION([$Id$])
+AC_REVISION([$Id: 03855d8ef42a83e02c2c57833127e6e5c7fdb2bf $])
 AC_INIT(ldapcpplib, [] , [http://www.openldap.org/its/] )
 AC_CONFIG_SRCDIR(src/LDAPConnection.h)
 AM_INIT_AUTOMAKE(foreign)
