Import centos7 release 2.4.39-6

--- a/slapd.service
+++ b/slapd.service
@@ -1,6 +1,11 @@
 [Unit]
 Description=OpenLDAP Server Daemon
 After=syslog.target network.target
+Documentation=man:slapd
+Documentation=man:slapd-config
+Documentation=man:slapd-hdb
+Documentation=man:slapd-mdb
+Documentation=file:///usr/share/doc/openldap-servers/guide.html
 
 [Service]
 Type=forking
