--- a/slapd.service
+++ b/slapd.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=OpenLDAP Server Daemon
-After=syslog.target network-online.target
+After=syslog.target network.target
 Documentation=man:slapd
 Documentation=man:slapd-config
 Documentation=man:slapd-hdb
@@ -9,11 +9,9 @@ Documentation=file:///usr/share/doc/openldap-servers/guide.html
 
 [Service]
 Type=forking
-PIDFile=/var/run/openldap/slapd.pid
-Environment="SLAPD_URLS=ldap:/// ldapi:///" "SLAPD_OPTIONS="
-EnvironmentFile=/etc/sysconfig/slapd
 ExecStartPre=/usr/libexec/openldap/check-config.sh
-ExecStart=/usr/sbin/slapd -u ldap -h ${SLAPD_URLS} $SLAPD_OPTIONS
+ExecStart=/usr/sbin/slapd -u ldap -h "ldap:/// ldaps:/// ldapi:///"
 
 [Install]
 WantedBy=multi-user.target
+Alias=openldap.service
